Spacing issue

--- a/style.css
+++ b/style.css
@@ -245,7 +245,6 @@ h1, h2, h3, h4, h5, h6 {
 	font-size: 100%;
 	font: inherit;
 	vertical-align: baseline;
-	padding-top: 15px;
 	margin-bottom: 10px;
 	display: block;
 	clear: both;
@@ -255,7 +254,8 @@ h1,h2 {
 	font-weight: 700;
 	line-height: 35px;
 }
-h1 {
+h1,
+h1 span {
 	font-size: 30px;
 }
 h2 {
@@ -913,7 +913,7 @@ a:active {
 	text-indent: -99999999999px;
 }
 .widget_search label{
-
+	margin-bottom: 5px;
 	width: 100%;
 	position: relative;
 }
@@ -986,6 +986,10 @@ a:active {
 .single .byline,
 .group-blog .byline {
 	display: inline;
+}
+.entry-meta-large .byline,
+.entry-meta-large .updated {
+	display: none;
 }
 .page-content,
 .entry-content,
@@ -1070,6 +1074,9 @@ a:active {
 }
 .comment-form, .comments-title, .comment-reply-title {
 	text-align:left;
+}
+.comment .reply a {
+	font-size: 12px;
 }
 .comment-form p {
 	margin:10px 10px 10px 0;
@@ -1325,6 +1332,7 @@ object {
 }
 .section-header {
 	text-align: center;
+	padding-bottom: 75px;
 }
 .section-header h2 {
 	padding-bottom: 10px;
@@ -1333,10 +1341,14 @@ object {
 	display: inline-block;
 	font-size: 45px;
 	text-transform: uppercase;
+	margin-top: 15px;
+	margin-bottom: 0;
 }
 .section-header h6 {
 	font-size: 16px;
-	padding-bottom: 15px;
+	margin-bottom: 0;
+	color: #808080;
+	padding-top: 0;
 }
 /* PRE LOADER */
 .preloader {
@@ -1377,7 +1389,7 @@ object {
 	position: relative;
 	-webkit-box-shadow: 0px 5px 11px 0px rgba(50, 50, 50, 0.08);
 	box-shadow: 0px 5px 11px 0px rgba(50, 50, 50, 0.08);
-	padding: 21% 0 150px;
+	padding: 285px 0 210px;
 }
 .header_title {
     float: left;
@@ -1405,8 +1417,8 @@ object {
 	float: right;
 	margin-right: 0;
 	margin-left: 0;
-	padding: 0;
- }
+
+}
 .navbar {
 	background: #FFF;
 	border: 0;
@@ -1490,7 +1502,7 @@ object {
 	height: 76px;
 	position: relative;
 	line-height: 60px;
-	padding: 7px;
+	padding: 7px 15px;
 	display: inline-block;
 }
 .navbar-brand > img {
@@ -1606,6 +1618,7 @@ object {
 #carousel-homepage-latestnews .item{
 	height: auto;
 }
+.latesnews-content p,
 .latesnews-content {
 	font-size: 14px;
 	line-height: 18px;
@@ -1622,6 +1635,7 @@ object {
 	font-size: 17px;
 	float: none;
 	width: auto;
+	margin-top: 15px;
 }
 #carousel-homepage-latestnews .carousel-inner .item .latestnews-title a {
 	text-transform: uppercase;
@@ -1680,7 +1694,6 @@ object {
 	float: left;
 }
 #carousel-homepage-latestnews {
-	margin-top: 20px;
 }
 
 /*---------------------------------------
@@ -1807,6 +1820,7 @@ object {
 	padding: 0;
 	max-width: 800px;
 	margin-bottom: 20px;
+	margin-top: 15px;
 }
 /*---------------------------------------
  **   Section: Portfolio          -----
@@ -1886,6 +1900,7 @@ width: -webkit-calc(100% / 4);
 	position: relative;
 	display: inline-block;
 	margin-bottom: 15px;
+	margin-top: 15px;
 	font-weight: bold;
 	text-transform: uppercase;
 }
@@ -2018,6 +2033,7 @@ width: -webkit-calc(100% / 4);
 	clear: none;
 	width: auto;
 	float: none;
+	margin-top: 15px;
 }
 .skills .skill p {
 	line-height: 20px;
@@ -2038,6 +2054,7 @@ width: -webkit-calc(100% / 4);
 .our-clients h5 {
 	font-weight: 700;
 	float:none;
+	margin-top: 15px;
 }
 .client-list {
 	padding-top: 5px;
@@ -2188,10 +2205,10 @@ width: -webkit-calc(100% / 4);
 	color: #404040;
 	font-weight: 700;
 	position: relative;
+	margin-top: 15px;
 }
 .team-member .position {
 	font-size: 13px;
-	margin-top: 15px;
 }
 .team-member .social-icons {
 	margin-bottom: 25px;
@@ -2225,6 +2242,7 @@ width: -webkit-calc(100% / 4);
 .our-team .row > div:nth-child(4n+4) .red-border-bottom:before{
     background: #f7d861;
 }
+
 /*---------------------------------------
  **   Features            -----
 -----------------------------------------*/
@@ -2653,11 +2671,12 @@ width: -webkit-calc(100% / 4);
 -----------------------------------------*/
 #footer {
 	background: #272727;
+	line-height: 20px;
 }
 .company-details {
 	color: #939393;
 	padding-top: 67px;
-	padding-bottom: 67px;
+	padding-bottom: 30px;
 }
 .company-details .icon-top {
 	font-size: 30px;
@@ -2681,6 +2700,10 @@ width: -webkit-calc(100% / 4);
 }
 .social li a:hover {
 	color: #e96656;
+}
+.copyright p {
+	margin-bottom: 0;
+	color: #939393;
 }
 /*---------------------------------------
  **   Single page           -----
@@ -2892,13 +2915,21 @@ article .posted-on a:hover{
 }
 .entry-footer-large{
 	background: transparent;
-	padding: 10px 30px 20px 0px;
+	padding: 0 0 20px 0px;
+	position: relative;
+	padding-right: 200px;
+	float: left;
+	width: 100%;
 }
 .entry-footer-large > span {
-	padding-right: 15px;
+	padding-right: 5px;
+}
+.entry-footer-large-left {
+	float: left;
 }
 .large-container .entry-content p {
-	margin: 10px 20px 0px 0px;
+	margin: 4px 20px 0px 0px;
+	text-align: justify;
 }
 .entry-content{
 	margin: 1em 0 0;
@@ -2952,8 +2983,10 @@ article .posted-on a:hover{
 
 /* ====================== Large TEMPLATE ============================== */
 .entry-meta-large{
-	float: left;
-	width: 100%;
+	float: right;
+	position: absolute;
+	right: 0;
+	top: 0
 }
 .entry-content p {
 	text-align:justify;
@@ -2979,18 +3012,19 @@ article .posted-on a:hover{
 	background: rgba(255, 255, 255, 0.9) none repeat scroll 0% 0%;
 	min-height: 50px;
 	width: 100%;
-	padding: 20px 20px 0px 20px;
+	padding: 15px 20px 0px 20px;
 	border-top: 2px solid #FFF;
 }
 .large-container {
 	background-color: #fff;
 	border-radius:4px;
-	margin: 35px 0;
+	margin: 0 0 35px 0;
 	position: relative;
-	width: 97%;
+	width: 95%;
+	float: left;
 }
 .large-container .list-post-top {
-	min-height: 1px;
+	min-height: 130px;
 }
 
 /* woocommerce v2.3.5 */
@@ -4155,6 +4189,14 @@ article .posted-on a:hover{
 	}
 	#wpadminbar {
   		position: fixed;
+	}
+	.entry-meta-large {
+		position: relative;
+		float: left;
+		width: 100%;
+	}
+	.entry-footer-large {
+		padding-right: 0;
 	}
 }
 @media (max-width: 480px) {
